Start compiling data

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,3 +3,4 @@ $color-grey: #a7a7a7;
 $color-light-grey: #eee;
 $color-dark-grey: #747474;
 $color-dark-blue: #00A7F7;
+$color-darker-blue: darken(#00A7F7, 5%);
